@@ -12,14 +12,14 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.nbt.StringNbtReader;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import static net.minecraft.nbt.StringNbtReader.EXPECTED_VALUE;
 
 public class CompoundNbtTagArgumentType implements ArgumentType<NbtCompound> {
     private static final CompoundNbtTagArgumentType INSTANCE = new CompoundNbtTagArgumentType();
-    private static final Collection<String> EXAMPLES = Arrays.asList("{foo:bar}", "{foo:[aa, bb],bar:15}");
+    private static final Collection<String> EXAMPLES = List.of("{foo:bar}", "{foo:[aa, bb],bar:15}");
 
     public static CompoundNbtTagArgumentType create() {
         return INSTANCE;
@@ -53,8 +53,8 @@ public class CompoundNbtTagArgumentType implements ArgumentType<NbtCompound> {
         reader.expect('}');
         b.append('}');
         return StringNbtReader.parse(b.toString()
-                .replace("$", "\u00a7")
-                .replace("\u00a7\u00a7", "$")
+                .replace("$", "§")
+                .replace("§§", "$")
         );
     }
 
